crates/rolldown/tests/rolldown/errors/missing_export_reexport_type/main.ts
export { Foo } from './foo.ts'

import { Bar } from './bar.ts'
export { Bar }
